fix(vradiogroup): fix radio group label alignment
fix #10403

--- a/packages/vuetify/src/components/VRadioGroup/VRadioGroup.sass
+++ b/packages/vuetify/src/components/VRadioGroup/VRadioGroup.sass
@@ -3,7 +3,7 @@
 
 .v-input--radio-group
   legend
-    align-self: center
+    align-self: initial
     display: inline-block
 
   &__input
